fix: allow selecting only value on double click on Descriptions.Item (#24983)
* Wrap children with div

* Add display: inline

* Revert changes

* Wrap content by div

* Revert "Wrap content by div"

This reverts commit 90e827af1b5f7b1c21e61aad10fc0a5c7695c0f0.

* Insert invisible space

* Insert <i> before <span> for content

* Use @afc163's approach

--- a/components/descriptions/style/index.less
+++ b/components/descriptions/style/index.less
@@ -75,7 +75,8 @@
   &-item {
     padding-bottom: 0;
     > span {
-      display: inline-block;
+      display: inline-flex;
+      align-items: baseline;
     }
   }
 
